# beads-rs

./: .envrc  .gitignore  AGENTS.md  BENCHMARKING.md  CLI_SPEC.md  CRDT_OVERHAUL.md  Cargo.toml  INVESTIGATION-data-loss-2026-02-25.md  MIGRATION.md  README.md  REALTIME_ERRORS.md  REALTIME_PLAN.md  REALTIME_SPEC_DRAFT.md  REALTIME_STATES.md  SPEC.md  SUBAGENTS.md  WORKFLOW.md  deps.jsonl  fix_cli.py  fix_client_syntax.py  fix_client_syntax_2.py  fix_client_syntax_3.py  fix_codec_syntax.py  fix_daemon_run.py  fix_daemon_run2.py  fix_daemon_run3.py  fix_ipc.py  fix_ipc_errors.sh  fix_ipc_errors_2.sh  fix_ipc_errors_3.sh  fix_rs_error.py  fix_rs_error_2.py  flake.nix  justfile  manifest.json  map_errors.py  meta.json  notes.jsonl  rustfmt.toml  shell.nix  (+5 more)
beads_stateright_models/: AGENTS.md  Cargo.toml  README.md
beads_stateright_models/examples/: admission_overload_machine.rs  canonical_hash_machine.rs  checkpoint_lane_machine.rs  durability_idempotency_machine.rs  durability_quorum_machine.rs  equivocation_machine.rs  fairness_bounds_machine.rs  gap_want_machine.rs  gc_floor_machine.rs  hash_prev_machine.rs  idempotency_receipt_machine.rs  identity_epoch_machine.rs  identity_handshake.rs  read_gating_machine.rs  receipt_consistency_machine.rs  repl_core_machine.rs  session_coordinator_boundary.rs  wal_crash_recovery_machine.rs  watermarks_machine.rs
beads_stateright_models/examples/deferred/: gc_floor_machine.rs
beads_stateright_models/scripts/: run_repl_equivocate.sh
beads_stateright_models/src/: drift_guard.rs  lib.rs  realtime_types_sketch.rs  spec.rs  toy_codec.rs
beads_stateright_models/tests/: durability_idempotency_regression.rs
crates/beads-api/: AGENTS.md  Cargo.toml
crates/beads-api/src/: AGENTS.md  admin.rs  deps.rs  issues.rs  lib.rs  query.rs  realtime.rs  tracker.rs
crates/beads-bootstrap/: AGENTS.md  Cargo.toml
crates/beads-bootstrap/src/: lib.rs  paths.rs  repo.rs
crates/beads-bootstrap/src/config/: AGENTS.md  env.rs  load.rs  merge.rs  mod.rs
crates/beads-bootstrap/tests/: repo_discovery.rs
crates/beads-cli/: AGENTS.md  Cargo.toml
crates/beads-cli/src/: AGENTS.md  backend.rs  cli.rs  filters.rs  lib.rs  parsers.rs  paths.rs  render.rs  runtime.rs  validation.rs
crates/beads-cli/src/commands/: AGENTS.md  admin.rs  blocked.rs  claim.rs  close.rs  comments.rs  common.rs  count.rs  create.rs  daemon.rs  delete.rs  deleted.rs  dep.rs  epic.rs  init.rs  input.rs  label.rs  list.rs  migrate.rs  mod.rs  onboard.rs  prime.rs  ready.rs  reopen.rs  search.rs  setup.rs  show.rs  stale.rs  status.rs  store.rs  subscribe.rs  sync.rs  unclaim.rs  update.rs  upgrade.rs
crates/beads-cli/src/migrate/: go_export.rs  mod.rs
crates/beads-cli/src/upgrade/: mod.rs  release.rs
crates/beads-core/: AGENTS.md  Cargo.toml
crates/beads-core/src/: AGENTS.md  apply.rs  bead.rs  collections.rs  composite.rs  crdt.rs  dep.rs  dep_tombstone_store.rs  domain.rs  durability.rs  effect.rs  error.rs  event.rs  identity.rs  json_canon.rs  lib.rs  limits.rs  meta.rs  namespace.rs  namespace_policies.rs  namespaced_state.rs  orset.rs  replica_roster.rs  state.rs  store_meta.rs  time.rs  tombstone.rs  validated.rs  watermark.rs  wire_bead.rs
crates/beads-core/src/state/: canonical.rs  deps.rs  labels.rs  mod.rs  notes.rs
crates/beads-core/tests/: AGENTS.md  apply_semantics.rs  canonical_cbor.rs  event_validation.rs
crates/beads-core/tests/support/: cbor.rs  event_body.rs  mod.rs
crates/beads-daemon/: AGENTS.md  Cargo.toml
crates/beads-daemon-core/: AGENTS.md  Cargo.toml
crates/beads-daemon-core/src/: AGENTS.md  durability.rs  lib.rs
crates/beads-daemon-core/src/repl/: frame.rs  gap_buffer.rs  mod.rs  peer_acks.rs  proto.rs
crates/beads-daemon-core/src/wal/: contract.rs  event_wal.rs  frame.rs  fsck.rs  index.rs  (+7 more)
crates/beads-daemon/src/: AGENTS.md  admin.rs  admission.rs  broadcast.rs  config.rs  env_flags.rs  git_lane.rs  io_budget.rs  layout.rs  lib.rs  metrics.rs  paths.rs  remote.rs  repo.rs  scheduler.rs  telemetry.rs  test_utils.rs
crates/beads-daemon/tests/: AGENTS.md  config_precedence.rs  layout_runtime_config.rs  private_field_compile_fail.rs  repl.rs  wal.rs
crates/beads-git/: AGENTS.md  Cargo.toml
crates/beads-git/src/: error.rs  lib.rs  observe.rs  paths.rs  sync.rs  wire.rs
crates/beads-git/tests/: AGENTS.md  checkpoint.rs  checkpoint_diff.rs  checkpoint_support.rs
crates/beads-http/: AGENTS.md  Cargo.toml
crates/beads-http/src/: lib.rs
crates/beads-rs/: AGENTS.md  Cargo.toml
crates/beads-rs/src/: AGENTS.md  enum_str.rs  error.rs  lib.rs  paths.rs  repo.rs  store_admin.rs  telemetry.rs  upgrade.rs
crates/beads-rs/tests/: AGENTS.md  core_state_fingerprint.rs  e2e.rs  integration.rs  public_boundary.rs
crates/beads-surface/: AGENTS.md  Cargo.toml
crates/beads-surface/src/: AGENTS.md  lib.rs  ops.rs  query.rs  store_admin.rs
crates/beads_stateright_models/: AGENTS.md  Cargo.toml  todo.md
crates/beads_stateright_models/examples/: admission_overload_machine.rs  canonical_hash_machine.rs  checkpoint_lane_machine.rs  durability_idempotency_machine.rs  durability_quorum_machine.rs  equivocation_machine.rs  fairness_bounds_machine.rs  gap_want_machine.rs  idempotency_receipt_machine.rs  read_gating_machine.rs  receipt_consistency_machine.rs  repl_core_machine.rs  session_coordinator_boundary.rs  wal_crash_recovery_machine.rs  watermarks_machine.rs
crates/beads_stateright_models/src/: drift_guard.rs  lib.rs  ordered_reliable_link.rs  realtime_types_sketch.rs
crates/beads_stateright_models/tests/: AGENTS.md  session_coordinator_boundary_regression.rs
crates/fuzz/: AGENTS.md  Cargo.toml
crates/fuzz/fuzz_targets/: event_body_decode.rs  repl_message_decode.rs  wal_decode.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: event_body_decode.rs  repl_message_decode.rs  wal_decode.rs
lints/beads_lints/: AGENTS.md  Cargo.toml
lints/beads_lints/src/: compat_gates.rs  lib.rs  private_interface_suppression.rs  replay_frontier_guard.rs  rotate_rebind.rs  typed_wal_boundaries.rs
lints/beads_lints/tests/: crate_dag_policy.rs  ui.rs
(+1319 files in other folders)
