[package]
name = "beads-rs"
version = "0.1.21"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "A distributed work-item database for agent swarms, using git as the sync layer"
repository = "https://github.com/delightful-ai/beads-rs"
homepage = "https://github.com/delightful-ai/beads-rs"
authors = ["Darin <darinkishore@protonmail.com>"]
keywords = ["cli", "git", "crdt", "issue-tracker", "agents"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [".beads/"]

# Dual CLI + library crate

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-tree = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
git2 = "0.20"
crossbeam = "0.8"
signal-hook = "0.3"
whoami = "1.4"
libc = "0.2"
time = { version = "0.3", features = ["parsing", "formatting"] }
dirs = "6.0.0"
chrono = "0.4"
flate2 = "1"
tar = "0.4"
toml = "0.8"
ureq = { version = "2", default-features = true }
tempfile = "3"

[features]
default = ["cli"]
cli = ["clap"]

[[bin]]
name = "bd"
path = "src/bin/main.rs"
required-features = ["cli"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
