[workspace]
resolver = "2"
members = [
    "crates/beads-rs",
    "crates/beads_stateright_models",
    "crates/fuzz",
]

# Shared dependencies for workspace inheritance
[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
bytes = "1"

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/delightful-ai/beads-rs"

# Build profiles (workspace-level)
[profile.dev]
incremental = true

[profile.release]
incremental = false
debug = true

# Optimize dependencies in dev builds for faster test/runtime execution
[profile.dev.package."*"]
opt-level = 2
