[workspace]
resolver = "2"
members = [
    "crates/beads-macros",
    "crates/beads-core",
    "crates/beads-api",
    "crates/beads-surface",
    "crates/beads-rs",
    "crates/beads_stateright_models",
    "crates/fuzz",
]

# Shared dependencies for workspace inheritance
[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
bytes = "1"

[workspace.package]
version = "0.2.0-alpha"
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/delightful-ai/beads-rs"

# Dylint configuration
[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general" },
    { path = "lints/beads_lints" },
]

# Workspace-wide lints
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.lints.clippy]
all = "warn"

# Build profiles (workspace-level)
[profile.dev]
incremental = true

[profile.release]
incremental = false
debug = true

# Optimize dependencies in dev builds for faster test/runtime execution
[profile.dev.package."*"]
opt-level = 2
