[package]
name = "beads_stateright_models"
version = "0.1.0"
edition = "2021"

[dependencies]
stateright = "0.31.0"

# Utility deps used by the models
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI helpers (same as upstream Stateright examples)
env_logger = "0.10"
num_cpus = "1"
pico-args = "0.5"

[profile.release]
debug = true
