[package]
name = "beads-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.beads-rs]
path = ".."

[[bin]]
name = "wal_decode"
path = "fuzz_targets/wal_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "event_body_decode"
path = "fuzz_targets/event_body_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "repl_message_decode"
path = "fuzz_targets/repl_message_decode.rs"
test = false
doc = false
bench = false
