[package]
name = "beads-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "API types and IPC protocol for beads-rs"

[dependencies]
beads-core = { path = "../beads-core" }
serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
