[package]
name = "beads-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure bootstrap helpers for beads path and config discovery"

[dependencies]
beads-core = { path = "../beads-core" }
dirs = "6.0.0"

[dev-dependencies]
uuid = { workspace = true }

[lints]
workspace = true
