[package]
name = "beads-daemon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared daemon protocol and WAL primitives for beads-rs"

[dependencies]
beads-core = { path = "../beads-core" }
crc32c = "0.6"
bytes.workspace = true
minicbor = { version = "0.24", features = ["std"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true
