[package]
name = "beads-daemon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared daemon protocol and WAL primitives for beads-rs"

[features]
default = []
wal-sqlite = ["dep:rusqlite"]
wal-fs = ["dep:dirs", "dep:rand", "dep:toml", "dep:tracing"]
test-harness = []
model-testing = []

[dependencies]
beads-core = { path = "../beads-core" }
crc32c = "0.6"
hex = "0.4"
bytes.workspace = true
minicbor = { version = "0.24", features = ["std"] }
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
dirs = { version = "6.0.0", optional = true }
rand = { version = "0.9", optional = true }
rusqlite = { version = "0.31", optional = true }
toml = { version = "0.8", optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
uuid.workspace = true
tempfile = "3"
