[package]
name = "beads-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon runtime crate for beads-rs"

[features]
default = []
slow-tests = []
test-harness = []
model-testing = []

[dependencies]
beads-core = { path = "../beads-core" }
beads-api = { path = "../beads-api" }
beads-surface = { path = "../beads-surface" }
beads-macros = { path = "../beads-macros" }
beads-git = { path = "../beads-git" }
beads-daemon-core = { path = "../beads-daemon-core", features = ["wal-sqlite", "wal-fs"] }
crossbeam = "0.8"
signal-hook = "0.3"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
crc32c = "0.6"
whoami = "1.4"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
dirs = "6.0.0"
chrono = "0.4"
flate2 = "1"
tar = "0.4"
toml = "0.8"
ureq = { version = "2", default-features = true }
tempfile = "3"
bytes = "1"
minicbor = { version = "0.24", features = ["std"] }
rusqlite = "0.31"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "json"] }
tracing-appender = "0.2"
tracing-tree = "0.3"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
bytes.workspace = true
uuid.workspace = true
