[package]
name = "beads-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A distributed work-item database for agent swarms, using git as the sync layer"
homepage = "https://github.com/delightful-ai/beads-rs"
authors = ["Darin <darinkishore@protonmail.com>"]
keywords = ["cli", "git", "crdt", "issue-tracker", "agents"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [".beads/"]

# Dual CLI + library crate

[dependencies]
beads-core = { path = "../beads-core" }
beads-api = { path = "../beads-api" }
beads-surface = { path = "../beads-surface" }
beads-macros = { path = "../beads-macros" }
beads-cli = { path = "../beads-cli" }
beads-daemon = { path = "../beads-daemon" }
beads-daemon-core = { path = "../beads-daemon-core" }
clap = { version = "4", features = ["derive"], optional = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
tracing = "0.1"
tracing-tree = "0.3"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "json"] }
tracing-appender = "0.2"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
crc32c = "0.6"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
crossbeam = "0.8"
signal-hook = "0.3"
whoami = "1.4"
libc = "0.2"
nix = { version = "0.29", features = ["signal", "user"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
dirs = "6.0.0"
chrono = "0.4"
flate2 = "1"
tar = "0.4"
toml = "0.8"
ureq = { version = "2", default-features = true }
tempfile = "3"
bytes = "1"
minicbor = { version = "0.24", features = ["std"] }
rusqlite = "0.31"

[features]
default = ["cli"]
cli = ["clap"]
slow-tests = []
test-harness = ["beads-core/test-harness"]
e2e-tests = ["test-harness"]
model-testing = []

[[bin]]
name = "bd"
path = "src/bin/main.rs"
required-features = ["cli"]

[dev-dependencies]
assert_cmd = "2"
pathdiff = "0.2.3"
predicates = "3"
proptest = "1"

[lints]
workspace = true
