[package]
name = "beads_stateright_models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stateright = "0.31.0"

# Utility deps used by the models
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "1"
beads-rs = { path = "../beads-rs", default-features = false, features = ["model-testing"] }

# CLI helpers (same as upstream Stateright examples)
env_logger = "0.10"
num_cpus = "1"
pico-args = "0.5"

[features]
model_testing = []

[lints]
workspace = true
