[package]
name = "beads-rs-fuzz"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
beads-rs = { path = "../beads-rs" }
libz-sys = { version = "1.1", features = ["static"] }

[[bin]]
name = "wal_decode"
path = "fuzz_targets/wal_decode.rs"
test = false
doc = false

[[bin]]
name = "event_body_decode"
path = "fuzz_targets/event_body_decode.rs"
test = false
doc = false

[[bin]]
name = "repl_message_decode"
path = "fuzz_targets/repl_message_decode.rs"
test = false
doc = false

[lints]
workspace = true
