[package]
name = "beads_lints"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5"
serde = { version = "1.0", features = ["derive"] }
# clippy_utils must match the nightly toolchain (nightly-2025-12-01 = rustc 1.93.0)
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
rustc-hash = "1"

[dev-dependencies]
dylint_testing = "5"

[package.metadata.rust-analyzer]
rustc_private = true
